# nonebot_plugin_translator

./: .gitignore  README.md  README.rst  poetry install.bat  pyproject.toml
.github/workflows/: windows-startup-test.yml
nonebot_plugin_translator/: __init__.py  translator.py
