[tool.poetry]
name = "nonebot_plugin_translator"
version = "2.0.0-beta.2"
description = "Multi language tanslator worked with nonebot2"
authors = ["Lancercmd <lancercmd@gmail.com>"]
license = "GPLv3"
readme = "README.rst"
repository = "https://github.com/Lancercmd/nonebot_plugin_translator"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0-beta.2"
nonebot-adapter-onebot = "^2.0.0-beta.1"
aiohttp = "^3.8.1"
ujson = ">=4.3.0,<6.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
